# Accounting

./: AccountBook.txt  CMakeLists.txt  README.md  main.cpp
header/: account_item.h  common.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
source/: menus.cpp  operations.cpp  read_input.cpp
